feat: custom song player and better media scanner:
* custom audio player instead of html default
* serve api on the same port as the nuxt app
* bundle nuxt app into the go binary
* gather metadata from song tags
* show currently playing song

TODO: decouple the song player so that it shows on every page
